--- a/01 - Coins/report.Rmd
+++ b/01 - Coins/report.Rmd
@@ -5,22 +5,17 @@ author: 'Team 04'
 header-includes:
 - \usepackage{fancyhdr}
 - \pagestyle{fancy}
-- \fancyfoot[CO,CE]{EEE933 - Design and Analisys of Experiments}
+- \fancyfoot[CO,CE]{EEE933 - Planejamento e Análise de Experimentos}
 - \fancyfoot[LE,RO]{\thepage}
-<<<<<<< HEAD
-=======
 
->>>>>>> 612a9bcda7ad42c4d7055a137303e2a7ce5455d6
-date: abril de 2017
 output:
   pdf_document:
     fig_caption: yes
----
+---  
+
 Coordenador: Gustavo Vieira    
 Relator: Danny Tonidandel  
-<<<<<<< HEAD
 Verificador: Alessandro Dias
-
 Monitor: Bernardo Marques  
 
 
@@ -79,27 +74,6 @@ power.t.test(power=0.8, delta=5, sd=v_coins.sd, sig.level=0.05, type="one.sample
 power.t.test(n=29, delta=0.05, sd=v_value.sd, sig.level=0.05, type="one.sample", alternative="two.sided")
 power.t.test(power=0.8, delta=0.5, sd=v_value.sd, sig.level=0.05, type="one.sample", alternative="two.sided")
 ```
-=======
-Verificador: Alessandro Dias   
-Monitor: Bernardo Marques  
-
-
-```{r setup,include=FALSE, results='hide',warning=FALSE,echo=FALSE}
-if (!require(readr, quietly = TRUE)){
-  install.packages("readr")
-}
-if (!require(car, quietly = TRUE)){
-  install.packages("car")
-}
-if (!require(lmtest, quietly = TRUE)){
-  install.packages("lmtest")
-}
-
-v_data = readr::read_csv('data.csv')
-v_coins = v_data$coins
-v_value = v_data$value
-n = length(v_data$coins)
-```
 
 # 1- O experimento
 
@@ -108,7 +82,6 @@ Até que ponto a opinião de pessoas comuns, reunidas em grandes quantidades, po
 
 ##**1.2. Descrição do Problema**
 Da mesma forma podemos conjecturar que o experimento proposto pelo professorda disciplina _Design and Analisys of Experiments_ foi inspirado nos mesmos experimentos. Com a diferença de que o material utilizado foram dois recipientes $A$ e $B$, cheios de moedas, descritos no estudo de caso um [4] . O vigente estud busca, portanto, investigar se as opiniões de `r n` estudantes.
->>>>>>> 612a9bcda7ad42c4d7055a137303e2a7ce5455d6
 
 # 1- O experimento
 
@@ -127,10 +100,13 @@ H_{0}: \mu=130,\\
 H_{0}: \mu \neq 130.
 \end{array}\right.$$
 
-e $$\left\{\begin{array}{rc}
+e 
+
+$$\left\{\begin{array}{rc}
 H_{0}: \mu=9.10,\\
 H_{0}: \mu \neq 9.10.
 \end{array}\right.$$
+
 Por razões históricas e por conveniência, o time julgou ser suficiente um nível de significância para o experimento de $5\%$, i.e., $\alpha=0.05$, que implica em um grau de confiança $1-\alpha$ de $95\%$. 
 
 # 2 - Análise Estatística
@@ -145,13 +121,17 @@ Normalidade e independência são facilmente verificáveis por testes, porém, c
 A premissa de normalidade foi realizada por meio do teste de Shapiro-Wilk
 
 Para o caso $A$, do número de moedas:
+
 ```{r, warning=FALSE,echo=FALSE}
 shapiro.test(v_coins)
 ```
+
 E para o caso $B$, para o valor:
+
 ```{r, warning=FALSE,echo=FALSE}
 shapiro.test(v_value)
 ```
+
 Para os dois casos, o valor de $W_{\alpha}$
 
 ```{r,results='hide',warning=FALSE,echo=FALSE}
@@ -163,7 +143,9 @@ title("case A")
 qqPlot(v_value)
 title("caseB")
 ```
+
 ### 2. Independência
+
 ```{r,results='hide',warning=FALSE,echo=FALSE}
 dwtest(v_coins~1)
 dwtest(v_value~1)
@@ -171,6 +153,7 @@ dwtest(v_value~1)
 ```
 
 ## B. Análise Descritiva
+
 ```{r,results='hide',warning=FALSE,echo=FALSE}
 v_coins.mean = mean(v_coins)
 v_coins.sd = sd(v_coins)
@@ -194,6 +177,7 @@ t.test(v_value, mu=v_value.mu0)
 ```
 
 ### Potência dos Tests
+
 ```{r,results='hide',warning=FALSE,echo=FALSE}
 v_coins.delta = 10
 v_coins.desiredPower = 0.8
@@ -208,11 +192,6 @@ v_value.n = power.t.test(power=v_value.desiredPower, delta=v_value.delta, sd=v_v
 ```
 
 A potência é `r v_value.powerReal` 
-<<<<<<< HEAD
-=======
-
-# IV. Discussão e Conclusões
->>>>>>> 612a9bcda7ad42c4d7055a137303e2a7ce5455d6
 
 # Considerações finais
 Surowiecki, em seu estudo, lembra que a diferença não só contribui trazendo novas perspectivas para o ambiente, mas também ajuda os integrantes a expressarem mais livremente suas opiniões - sejam elas divergentes ou não [2, p. 38-39]. Isto revela o problema da coleta aberta no segundo caso, pois, não importa a magnitude do erro: mesmo que a "intuição" sugira o contrário, as pessoas dificilmente dariam respostas muito discrepantes da maioria. Gregory Berns, em seu _Iconoclast: A Neuroscientist Reveals How to Think Differently_[7] questiona inclusive a influência do grupo sobre a percepção das pessoas. Embora os estudantes garantirem terem dados a melhor resposta de acordo com suas observações, eles provavelmente questionavam suas convicções. Pode ser que alguns duvidassem daquilo que estavam vendo. Aparentemente as percepções permanecem intactas, mas a "fé" das pessoas nos seus sentidos, esta sim, parece ser moldada pela influência externa, alterando as decisões tomadas. E, no final, como o próprio prof. Campelo costuma afirmar em sala de aula, o que importa mesmo são as decisões.  Vale ressaltar que o grupo experienciou um certo "alívio" ao saber que a experiência era por isso, de certo modo, uma pequena farsa. 
@@ -235,18 +214,9 @@ Surowiecki, em seu estudo, lembra que a diferença não só contribui trazendo n
 [6] D.C. Montgomery, *Design and Analysis of Experiments*, 5th ed., John Wiley & Sons, 2001.   
 
 [7] Berns, G. *Iconoclast: A Neuroscientist Reveals How to Think Differently*. USA: Harvard Business press, 2008.
-=======
-[] Ramirez, J.G. *Statistical Intervals: Confidence, Prediction, Enclosure*. Disponível em <http://goo.gl/NJz7ot>
 
-[3] D.C. Montgomery, *Design and Analysis of Experiments*, 5th ed., John Wiley & Sons, 2001.   
->>>>>>> 612a9bcda7ad42c4d7055a137303e2a7ce5455d6
+[8] Ramirez, J.G. *Statistical Intervals: Confidence, Prediction, Enclosure*. Disponível em <http://goo.gl/NJz7ot>
 
-Peng, Roger D., *R Programming for Data Science*, Lulu, Inc.  
+[9] D.C. Montgomery, *Design and Analysis of Experiments*, 5th ed., John Wiley & Sons, 2001.   
 
-Peng, Roger D., *Report Writing for Data Science in R*, Lulu, Inc.
-
-Felipe Campelo, *Lecture Notes on Design and Analysis of Experiments*, 2015.
-
-
-
-
+[10] Felipe Campelo, *Lecture Notes on Design and Analysis of Experiments*, 2015.
