--- a/01 - Coins/report.Rmd
+++ b/01 - Coins/report.Rmd
@@ -63,11 +63,11 @@ dwtest(v_coins~1)
 dwtest(v_value~1)
 
 
-## inference
+## inference estatística - teste de t student
 t.test(v_coins, mu=130)
 t.test(v_value, mu=2.60*3.5) # mu = 9.10
 
-## 
+## Potência estatística do teste
 power.t.test(n=29, delta=10, sd=v_coins.sd, sig.level=0.05, type="one.sample", alternative="two.sided")
 power.t.test(power=0.8, delta=5, sd=v_coins.sd, sig.level=0.05, type="one.sample", alternative="two.sided")
 
@@ -77,108 +77,42 @@ power.t.test(power=0.8, delta=0.5, sd=v_value.sd, sig.level=0.05, type="one.samp
 
 # 1- O experimento
 
-##**1.1 Introdução**
-Até que ponto a opinião de pessoas comuns, reunidas em grandes quantidades, podem revelar _"verdades"_  acerca da natureza de determinado objeto ou fenômeno? Segundo Steiner [1], que realizou uma série de testes baseados no _best seller_ _The Wisdom of Crouds_ [2], o mais famooso experimento desta natrureza foi realizado pelo Cientista Vitoriano _Francis Galton_, em uma carta enviada à revista _Nature_ [3], na qual analisa uma competição realizada em _Plymouth_ (Inglaterra), em que diversas pessoas deveriam estimar a massa de um boi. Obviamente ninguém acertou exatamente o valor, mas a média das tentativas das quase $800$ pessoas que participaram do concurso refletiu, com bastante proximidade, o real valor da medida procurada.  E o que Steiner realizou foi testar a ideia utilizando-se de uma garrafa cheia de moedas, convidando pessoas que acessavam a internet a fazerem o mesmo, a partir de uma foto que mostrava a garrafa com as moedas.
+Até que ponto a opinião de pessoas comuns, reunidas em grandes quantidades, podem revelar _"verdades"_  acerca da natureza de determinado objeto ou fenômeno? Segundo Steiner [1], que realizou uma série de testes baseados no _best seller_ _The Wisdom of Crouds_ [2], o mais famooso experimento desta natrureza foi realizado pelo Cientista Vitoriano _Francis Galton_, em uma carta enviada à revista _Nature_ [3], na qual analisa uma competição realizada em _Plymouth_ (Inglaterra), em que diversas pessoas deveriam estimar a massa de um boi. Obviamente ninguém acertou exatamente o valor, mas a média das tentativas das quase $800$ pessoas que participaram do concurso refletiu, com bastante proximidade, o real valor da medida procurada.  E o que Steiner realizou foi testar a ideia utilizando-se de uma garrafa cheia de moedas, convidando pessoas que acessavam a internet a fazerem o mesmo, a partir de uma foto que mostrava a garrafa com as moedas. Mas seria isto verdade?
 
-##**1.2. Descrição do Problema**
-Da mesma forma podemos conjecturar que o experimento proposto pelo professorda disciplina _Design and Analisys of Experiments_ foi inspirado nos mesmos experimentos. Com a diferença de que o material utilizado foram dois recipientes $A$ e $B$, cheios de moedas, descritos no estudo de caso um [4] . O vigente estud busca, portanto, investigar se as opiniões de `r n` estudantes.
-
-# 1- O experimento
-
-##**1.1 Introdução**
-Até que ponto a opinião de pessoas comuns, reunidas em grandes quantidades, podem revelar _"verdades"_  acerca da natureza de determinado objeto ou fenômeno? Segundo Steiner [1], que realizou uma série de testes baseados no _best seller_ _The Wisdom of Crouds_ [2], o mais famooso experimento desta natrureza foi realizado pelo Cientista Vitoriano _Francis Galton_, em uma carta enviada à revista _Nature_ [3], na qual analisa uma competição realizada em _Plymouth_ (Inglaterra), em que diversas pessoas deveriam estimar a massa de um boi. Obviamente ninguém acertou exatamente o valor, mas a média das tentativas das quase $800$ pessoas que participaram do concurso refletiu, com bastante proximidade, o real valor da medida procurada.  E o que Steiner realizou foi testar a ideia utilizando-se de uma garrafa cheia de moedas, convidando pessoas que acessavam a internet a fazerem o mesmo, a partir de uma foto que mostrava a garrafa com as moedas. Mas seria isto verdade? 
-
-##**1.2. Descrição do Problema**
 Da mesma forma podemos conjecturar que o experimento proposto pelo professor da disciplina _Design and Analisys of Experiments_ foi inspirado nos mesmos experimentos. Com a diferença de que o material utilizado foram dois recipientes $A$ e $B$, cheios de moedas, conforme descrito na referência [4] . O vigente estudo busca, portanto, investigar se as opiniões de `r n` estudantes, isto é, o quanto a média das opiniões dos estudantes pode refletir o número e o valor real das moedas depositadas nos recipientes $A$ e $B$?
 
-##**1.3. Design Experimental**
-Como a média real não foi dada a conhecer pelo proponente do estudo, o time decidiu realizar uma montagem experimental semelhante (replicação do experimento), utilizando um recipiente de mesma natureza (copo plástico de $200ml$) para uma estimativa inicial do número de moedas no recipiente $A$, sabendo que era composto por moedas de natureza diferente (25 e 50 centavos e 1 real) e, no recipiente $B$, moedas de mesma natureza (5 centavos), utilizando contagem manual das moedas. O resultado seria utilizado como estimativa inicial para as médias: $$Recipiente \, A: 182 \mbox{ moedas};  Recipiente \,\mbox{e } \\ B: \mbox{9 reais e 10 centavos}.$$
+# 2. Design Experimental
+
+Como a média real não foi dada a conhecer pelo proponente do estudo, o time decidiu realizar uma montagem experimental semelhante (replicação do experimento), utilizando um recipiente de mesma natureza (copo plástico de $200ml$) para uma estimativa inicial do número de moedas no recipiente $A$, sabendo que era composto por moedas de natureza diferente (25 e 50 centavos e 1 real) e, no recipiente $B$, moedas de mesma natureza (5 centavos), utilizando contagem manual das moedas. O resultado seria utilizado como estimativa inicial para as médias: $Recipiente \, A: 182 \mbox{ moedas};  Recipiente \,\mbox{e } \\ B: \mbox{9 reais e 10 centavos}.$
 Assim, formula-se a hipótese de que a média das estimativas dos estudantes é igual ou não ao "valor real": 
 
 $$\left\{\begin{array}{rc}
 H_{0}: \mu=130,\\
-H_{0}: \mu \neq 130.
+H_{a}: \mu \neq 130.
 \end{array}\right.$$
 
-e 
-
-$$\left\{\begin{array}{rc}
+e $$\left\{\begin{array}{rc}
 H_{0}: \mu=9.10,\\
-H_{0}: \mu \neq 9.10.
+H_{b}: \mu \neq 9.10.
 \end{array}\right.$$
 
-Por razões históricas e por conveniência, o time julgou ser suficiente um nível de significância para o experimento de $5\%$, i.e., $\alpha=0.05$, que implica em um grau de confiança $1-\alpha$ de $95\%$. 
+O que forma um teste de hipóteses bilateral, considerando que os valores de $H_a e H_b$ são "reais", o que já é uma fonte de incertezas. 
 
-# 2 - Análise Estatística
+Por conveniência, julgou-se suficiente um nível de significância para o experimento de $5\%$, i.e., $\alpha=0.05$, que implica em um grau de confiança $1-\alpha$ de $95\%$. E a partir do conhecimento do time a respeito do problema em questão, adotou-se o menor efeito de significância prática como sendo $\delta^{\star}_A=10$ moedas (para o caso $A$) e $\delta^{\star}_B=0.50$ centavos (para o caso $B$).  Além disso, o nível de potência estatística para o experimento escolhida foi (inicialmente) de $(1-\beta)=0.8$.
 
-De antemão já é possível notar que é possível realizar uma análise estatística descritiva, porém esta análise só fornecerá informações sobre as opiniões dos estudantes, não da quantidade ou do valor real das moedas nos recipientes. 
-
-##**2.1 Validação das Premissas**
-Como não se tem informações sobre a variância da população, o time escolheu adotar o teste de _t student_, assumindo as premissas: 1) As estimativas dos estudantes se distribuem em torno do valor real. 2) As observações são independentes. 3) A distribuição das médias é normal.
-
-Normalidade e independência são facilmente verificáveis por testes, porém, como a premissa de que a média dos _"chutes"_ dos estudantes se aproxima do valor real não é facilmente testável _a priori_, sendo assim o ponto fraco da análise
-
-A premissa de normalidade foi realizada por meio do teste de Shapiro-Wilk
-
-Para o caso $A$, do número de moedas:
-
-```{r, warning=FALSE,echo=FALSE}
-shapiro.test(v_coins)
+# 3. Teste de Hipóteses
+```{r, include=TRUE, results='show',warning=FALSE,echo=TRUE}
+teste.t.coins<-t.test(v_coins, mu=130)
+teste.t.value<-t.test(v_value, mu=9.10)
+teste.t.coins
+teste.t.value
 ```
+O teste de hipóteses para dois casos sugere rejeitar a hipótese nula, considerando que $|t_{0}|>0.05$ para `r teste.t.coins$parameter` graus de liberdade.
 
-E para o caso $B$, para o valor:
-
-```{r, warning=FALSE,echo=FALSE}
-shapiro.test(v_value)
-```
-
-Para os dois casos, o valor de $W_{\alpha}$
-
-```{r,results='hide',warning=FALSE,echo=FALSE}
-hist(v_coins)
-hist(v_value)
-par(mfrow=c(1,2), mai=.4*c(2.5,1,1,1))
-qqPlot(v_coins)
-title("case A")
-qqPlot(v_value)
-title("caseB")
-```
-
-### 2. Independência
-
-```{r,results='hide',warning=FALSE,echo=FALSE}
-dwtest(v_coins~1)
-dwtest(v_value~1)
-
-```
-
-## B. Análise Descritiva
-
-```{r,results='hide',warning=FALSE,echo=FALSE}
-v_coins.mean = mean(v_coins)
-v_coins.sd = sd(v_coins)
-v_coins.rsd = sd(v_coins)/mean(v_coins)
-
-v_value.mean = mean(v_value)
-v_value.sd = sd(v_value)
-v_value.rsd = sd(v_value)/mean(v_value)
-
-```
-
-
-## C. Teste de Hipóteses
-
-```{r,results='show',warning=FALSE,echo=FALSE}
-v_coins.mu0 = 130
-v_value.mu0 = 2.60 * 3.5
-t.test(v_coins, mu=v_coins.mu0)
-t.test(v_value, mu=v_value.mu0)
-
-```
+No entanto, considerando-se que o teste sugere a rejeição da hipótese nula, e considerando-se a potência desejada e o menor efeito de significância prática para os dois casos ($\delta^{\star}_A=10$ moedas e $\delta^{\star}_B=0.50$ centavos), realzou-se um teste de potência:
 
 ### Potência dos Tests
-
-```{r,results='hide',warning=FALSE,echo=FALSE}
+```{r,results='hide',warning=FALSE,echo=TRUE}
 v_coins.delta = 10
 v_coins.desiredPower = 0.8
 v_coins.powerReal = power.t.test(n=29, delta=v_coins.delta, sd=v_coins.sd, sig.level=0.05, type="one.sample", alternative="two.sided")$power
@@ -192,6 +126,54 @@ v_value.n = power.t.test(power=v_value.desiredPower, delta=v_value.delta, sd=v_v
 ```
 
 A potência é `r v_value.powerReal` 
+
+##**2.1 Validação das Premissas**
+Como não se tem informações sobre a variância da população, o time escolheu adotar o teste de _t student_, assumindo as premissas: 1) As estimativas dos estudantes se distribuem em torno do valor real. 2) As observações são independentes. 3) A distribuição populacional das médias é normal.
+
+Normalidade e independência são verificáveis por testes, porém, como a premissa de que a média dos _"chutes"_ dos estudantes se aproxima do valor real não é facilmente testável _a priori_, acresenta-se mais  um ponto de viéses para a análise.
+
+A premissa de normalidade foi testada visualmente a partir dos gráficos $QQplots$:
+```{r, include=FALSE,results='hide',warning=FALSE,echo=FALSE}
+hist(v_coins)
+hist(v_value)
+par(mfrow=c(1,2), mai=.4*c(2.5,1,1,1))
+qqPlot(v_coins)
+title("case A")
+qqPlot(v_value)
+title("caseB")
+```
+o que demonstra que a população poderia não ser normal. Entretanto, dado o tamanho da amostra (`r n`), não é possível descartar ainda a hipótese de normalidade, segundo Montgomery [6]. Nestes casos, apenas uma severa disparidade nos dados poderia ser um indicativo de não-normalidade. A recomendação seria a de se usar uma amostra um pouco maior. Assim, os supostos _outliers_ não serão descartados e foi realizado o teste de _Shapiro-Wilk_ para normalidade. 
+Para o caso $A$, do número de moedas:
+```{r, warning=TRUE,echo=FALSE}
+shapiro.test(v_coins)
+```
+E para o caso $B$, para o valor:
+```{r, warning=FALSE,echo=FALSE}
+shapiro.test(v_value)
+```
+Para os dois casos, o valor de $W_{\alpha}$
+
+### 2. Independência
+```{r,results='hide',warning=FALSE,echo=FALSE}
+dwtest(v_coins~1)
+dwtest(v_value~1)
+
+```
+
+## B. Análise Descritiva
+```{r,results='hide',warning=FALSE,echo=FALSE}
+v_coins.mean = mean(v_coins)
+v_coins.sd = sd(v_coins)
+v_coins.rsd = sd(v_coins)/mean(v_coins)
+
+v_value.mean = mean(v_value)
+v_value.sd = sd(v_value)
+v_value.rsd = sd(v_value)/mean(v_value)
+
+```
+
+
+
 
 # Considerações finais
 Surowiecki, em seu estudo, lembra que a diferença não só contribui trazendo novas perspectivas para o ambiente, mas também ajuda os integrantes a expressarem mais livremente suas opiniões - sejam elas divergentes ou não [2, p. 38-39]. Isto revela o problema da coleta aberta no segundo caso, pois, não importa a magnitude do erro: mesmo que a "intuição" sugira o contrário, as pessoas dificilmente dariam respostas muito discrepantes da maioria. Gregory Berns, em seu _Iconoclast: A Neuroscientist Reveals How to Think Differently_[7] questiona inclusive a influência do grupo sobre a percepção das pessoas. Embora os estudantes garantirem terem dados a melhor resposta de acordo com suas observações, eles provavelmente questionavam suas convicções. Pode ser que alguns duvidassem daquilo que estavam vendo. Aparentemente as percepções permanecem intactas, mas a "fé" das pessoas nos seus sentidos, esta sim, parece ser moldada pela influência externa, alterando as decisões tomadas. E, no final, como o próprio prof. Campelo costuma afirmar em sala de aula, o que importa mesmo são as decisões.  Vale ressaltar que o grupo experienciou um certo "alívio" ao saber que a experiência era por isso, de certo modo, uma pequena farsa. 
@@ -208,7 +190,6 @@ Surowiecki, em seu estudo, lembra que a diferença não só contribui trazendo n
 
 [4] Campelo, F. *Estudo de caso 01*. Arquivo da disciplina Design and Analisys of Experiments. Disponível em <https://goo.gl/b3IeAn>. 
 
-<<<<<<< HEAD
 [5] Ramirez, J.G. *Statistical Intervals: Confidence, Prediction, Enclosure*. Disponível em <http://goo.gl/NJz7ot>
 
 [6] D.C. Montgomery, *Design and Analysis of Experiments*, 5th ed., John Wiley & Sons, 2001.   
